# RoScenes

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi.yaml
examples/: README.md
examples/mmdet3d/configs/: detr3d_roscene_res101.py
examples/mmdet3d/mmdet3d_plugin/datasets/: __init__.py  roscenes_dataset.py
roscenes/: __init__.py  consts.py  misc.py  transform.py  typing.py
roscenes/data/: __init__.py  camera.py  clip.py  frame.py  metadata.py  scene.py
roscenes/evaluation/: README.md  __init__.py
roscenes/evaluation/detection/: __init__.py  __main__.py  aggregator.py  config.py  evaluator.py  handlers.py  prediction.py  result.py
roscenes/visualizer/: __init__.py  __main__.py
